--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style.css"/>
 
 <title> Hello World! </title>
-
+<title> Edition fichier Github </title>
 <a href= "http://www.wildcodeschool.com"> Wild Code School </a>
 <meta charset="UTF-8">
 </head>
